--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "html_emails",
-  "version": "0.0.0",
-  "description": "html email templates for lehman's hardware",
-  "main": "_base.html",
-  "scripts": {
-    "test": "test"
+  "engines": {
+    "node": ">= 0.10.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/msqueeg/html_emails.git"
-  },
-  "keywords": [
-    "email",
-    "templates"
-  ],
-  "author": "michael miller",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/msqueeg/html_emails/issues"
-  },
-  "homepage": "https://github.com/msqueeg/html_emails"
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-nodeunit": "~0.2.2",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.7"
+  }
 }
